<resources>
    <string name="app_name">STAQS</string>
    <string name="uname">Username</string>
    <string name="psd">Password</string>
    <string name="email">Email</string>
    <string name="Sup">Create a new account?</string>
    <string name="login">Login</string>
    <string name="ca">Create a new account</string>
    <string name="type">Account Type</string>
    <string name="Student">Student</string>
    <string name="Teacher">Teacher</string>
    <string name="Sign_In">Sign in</string>
    <string name="title_activity_student_m">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home">"HOME"</string>
    <string name="u">a@g.com</string>
    <string name="p">123356</string>
    <string name="search">search</string>
    <string name="writeacaption">Write a Caption...</string>
    <string name="title">title</string>
    <string name="AddPost">Add Post</string>
    <string-array name="department">
        <item>Department</item>
        <item>CSE</item>
        <item>MBA</item>
        <item>BBA</item>
        <item>ECE</item>
    </string-array>
</resources>
