<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignTop="@+id/t1"
    android:gravity="center"
    tools:context=".MainActivity"
    android:id="@+id/rl"
    android:background="@color/colorPrimaryDark">
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" -->


    <TextView
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/Sign_In"
        android:layout_alignTop="@+id/imageView2"
        android:layout_margin="150dp"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button2"
        android:layout_marginTop="50dp"
        android:text="@string/Sup"
        android:textSize="20sp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/t1"
        android:layout_marginTop="100dp"
        android:background="#FFFFFF"
        android:hint="@string/uname"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:met_floatingLabel="highlight" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:text="@string/login" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="125dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        app:srcCompat="@drawable/logo" />
</RelativeLayout>